--- a/pos_app/templates/pos_app/customers.html
+++ b/pos_app/templates/pos_app/customers.html
@@ -65,6 +65,14 @@
                                                     <i class="fas fa-edit me-1"></i> Edit
                                                 </a>
                                             </li>
+                                            {% if customer.current_debt > 0 %}
+                                            <li>
+                                                <a class="dropdown-item" href="javascript:void(0)" onclick="openCustomerCreditReport({{ customer.id }}, '{{ customer.full_name|escapejs }}')">
+                                                    <i class="fas fa-file-alt me-1 text-info"></i> Credit Report
+                                                </a>
+                                            </li>
+                                            {% endif %}
+                                            <li><hr class="dropdown-divider"></li>
                                             <li>
                                                 <form action="{% url 'pos:customer_delete' customer.id %}" method="post" style="display:inline;">
                                                     {% csrf_token %}
